tests/ui/rfc-2632-const-trait-impl/hir-const-check.stderr
error[E0658]: `?` is not allowed in a `const fn`
  --> $DIR/hir-const-check.rs:12:9
   |
LL |         Some(())?;
   |         ^^^^^^^^^
   |
   = note: see issue #74935 <https://github.com/rust-lang/rust/issues/74935> for more information
   = help: add `#![feature(const_try)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
